removing react & encore from symfony

--- a/www/touspourun/templates/security/index.html.twig
+++ b/www/touspourun/templates/security/index.html.twig
@@ -4,6 +4,6 @@
 
 {% block body %}
     <div class="row">
-        <div id="react-app"></div>
+        <div id="root"></div>
     </div>
 {% endblock %}
